# DriveMoE

./: .gitignore  README.md  pyproject.toml  statistics.json
ckpts/: ckpt.md
config/eval/DriveMoE/: closed_loop.yaml  open_loop.yaml
config/eval/DrivePi0/: base.yaml  closed_loop.yaml  (+1 more)
config/statistics/: b2d_statistics.json
config/test_dataloader/: dynamic_camera_eval.yaml  dynamic_camera_train.yaml  fixed_camera.yaml
data/: data.md
docs/: drivemoe_base_bf16_seed1.json  drivemoe_base_bf16_seed2.json  drivepi0.json  drivepi_base_float16.json  drivepi_base_fp32.json  drivepi_full_fp32.json  evaluation.md  install.md  preprocessing.md  training.md
script/: generate_data.sh  run.py  set_path.sh
script/data_preprocessing/: generate_data.sh  get_statistics.sh  window.sh
script/evaluation/: closed_loop_drivemoe.sh  closed_loop_drivepi0.sh  eval_drivepi0.sh  open_loop_drivemoe.sh  open_loop_drivepi0.sh  requirements.txt
script/training/: train_drivemoe_stage1_closed_loop.sh  train_drivemoe_stage1_open_loop.sh  train_drivemoe_stage2_closed_loop.sh  train_drivemoe_stage2_open_loop.sh  train_drivepi0.sh  train_drivepi0_closed_loop.sh  train_drivepi0_open_loop.sh  train_multinode.sh
src/agent/: dataset.py
src/data/: camera_scenario_map.py  check_data.py  dataset.py
src/data_processing/: generate_data.py  get_statistics.py  utils.py  window.py
src/model/: kv_cache.py  lora.py  router.py  utils.py
src/utils/: decorator.py  draw_trajectory.py  metric.py  model_profiler.py  monitor.py  optim.py  pid.py  visualize.py
toturial/: visualize_b2d_data.ipynb
(+35 files in other folders)
